# tinycc

./: .gitignore  CMakeLists.txt  elf.h  libtcc.c  main.c  tcc.c  tcc.h  tccelf.c  tccgen.c  x86_64-gen.c  x86_64-link.c
